# clipforge-pro

./: .gitignore  .vercelignore  CLAUDE.md  README.md  index.html  package.json  start-clipforge.bat  vercel.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  migrate_clip_management.py  migrate_split_layout.py  pyproject.toml  render.yaml  requirements.txt  seed_caption_styles.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/endpoints/: __init__.py  analysis.py  brands.py  broll.py  captions.py  clips.py  editor.py  export.py  reframe.py  (+2 more)
backend/app/ml/: __init__.py  diarization_model.py  object_model.py  whisper_model.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/services/: __init__.py  analysis_pipeline.py  broll_detection_service.py  broll_integration_service.py  broll_search_service.py  caption_service.py  clip_suggestion_service.py  diarization_service.py  editor_service.py  hook_detection_service.py  llm_service.py  reframe_service.py  scene_detection_service.py  split_layout_service.py  thumbnail_service.py  transcription_service.py  video_service.py  virality_service.py  visual_analysis_service.py  xml_export_service.py
backend/app/workers/: __init__.py  celery_app.py  pipeline.py  tasks.py
backend/tests/: __init__.py  conftest.py  test_broll_detection_service.py  test_broll_endpoints.py  test_broll_integration_e2e.py  test_broll_integration_service.py  test_broll_search_service.py  test_split_layout.py
(+1 files in other folders)
